src/Test/Fixtures/Good/TypeQualifier/affineScratchQubits.lf
let affine scratch qs: [qubit; 2] = qalloc(2);
