src/Test/Fixtures/Bad/TypeQualifier/missingClosingBracketInAffineArrayBinding.lf
let affine qs: [qubit; 2 = qalloc(2);
